--- a/src/Components/HomePage/sections/Footer/Footer.css
+++ b/src/Components/HomePage/sections/Footer/Footer.css
@@ -1,10 +1,23 @@
 .footer{
     position: relative;
     width: 100%;
+    text-align: center !important;
     bottom: 0;
     font-family: "Google Sans";
-    padding: 32px 0;
+    padding: 3rem;
     background-color: #d4d4d4;
     /* border-top: 1px solid #15171c; */
     filter: drop-shadow(0px -2px 10px rgb(214, 214, 214));
+    margin: 0 auto !important;
+}
+
+.footer-text{
+    margin: 0 auto !important;
+}
+
+@Media only screen and (max-width:768px){
+    .footer{
+        padding: 2rem;
+        text-align: center !important;
+    }
 }
