--- a/src/Components/HomePage/sections/Header/HeaderSection.css
+++ b/src/Components/HomePage/sections/Header/HeaderSection.css
@@ -1,6 +1,5 @@
 .header{
     padding: 13px 0px 10px 20px;
-    position: absolute;
     top: 0;
     width: 100%;
     background: #fff;
@@ -36,16 +35,6 @@
     background-color: white;
     filter: drop-shadow(0px 2px 10px rgb(214, 214, 214));
 }
-
-.nav-header{
-    font-size: 1.2rem;
-    font-weight: 700;
-}
-
-.right-nav-text{
-    float: right;
-}
-
 @media only screen and (max-width : 768px){
     .logo{
         width: 70px;
